--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@vercel/node": "^3.2.29",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.15",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
