--- a/package.json
+++ b/package.json
@@ -55,15 +55,18 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/connect-redis": "^0.0.23",
     "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^6.4.14",
+    "@types/redis": "^4.0.10",
     "@vercel/analytics": "^1.6.1",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
+    "connect-redis": "^9.0.0",
     "cookie-parser": "^1.4.7",
     "date-fns": "^3.6.0",
     "decimal.js": "^10.6.0",
@@ -80,6 +83,7 @@
     "helmet": "^7.2.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.453.0",
     "mammoth": "^1.11.0",
     "memorystore": "^1.6.7",
@@ -97,6 +101,7 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "redis": "^5.10.0",
     "resend": "^6.4.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
