--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["api/**/*", "server/**/*", "shared/**/*"],
+  "include": [".", "../server/**/*", "../shared/**/*"],
   "exclude": ["node_modules", "dist", "client"]
 }
 
