--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "npm run build:api && vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "npm run build:api && vite build && esbuild server/index.ts server/workers/pdf.worker.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:api": "esbuild api/index.ts --platform=node --packages=external --bundle --format=esm --outfile=api/bundled.js",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
