--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "recharts": "^2.15.2",
     "redis": "^5.10.0",
     "resend": "^6.4.2",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
