--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/connect-redis": "^0.0.23",
     "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/redis": "^4.0.10",
     "@vercel/analytics": "^1.6.1",
@@ -89,6 +90,7 @@
     "memorystore": "^1.6.7",
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.9.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
