--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.12.0",
     "recharts": "^2.15.2",
     "redis": "^5.10.0",
     "resend": "^6.4.2",
