--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "resend": "^6.4.2",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
+    "svg-to-pdfkit": "^0.1.8",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
