feat: Improve type safety in PDF and subscription services, add cron-parser dependency, and introduce new security limitation tests.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "connect-pg-simple": "^10.0.0",
     "connect-redis": "^9.0.0",
     "cookie-parser": "^1.4.7",
+    "cron-parser": "^4.9.0",
     "date-fns": "^3.6.0",
     "decimal.js": "^10.6.0",
     "dotenv": "^16.4.5",
