--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-redis": "^0.0.23",
     "@types/cookie-parser": "^1.4.10",
+    "@types/dompurify": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
@@ -72,6 +73,7 @@
     "cron-parser": "^4.9.0",
     "date-fns": "^3.6.0",
     "decimal.js": "^10.6.0",
+    "dompurify": "^3.3.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
